<resources>
    <string name="app_name">Tutorial</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="perfect_10">Perfect! (10%)</string>
    <string name="good_7">Good (7%)</string>
    <string name="okay_5">Okay (5%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>